       for a branch that wasn't created from HEAD. (Stefan)
- BUG: the conflict resolve buttons were not enabled
       in TortoiseMerge. (Stefan)
- BUG: TortoiseMerge could hang with "ignore comments"
       enabled. (Sven Strickroth)
- BUG: The patch window in TMerge could be shown outside of a 
       multi-monitor setup, i.e. not in a visible area. (Stefan)

Version 1.9.4
- BUG: GDI Resource leak when showing a file list. (Stefan, Ivan)
- BUG: lifetime issue with path string for long paths. (Ivan Zhakov)
- BUG: The font size in the statistics dialog
       was wrong, font unreadable. (Stefan)
- CHG: Improved stability of the log cache. (Ivan Zhakov)
- BUG: TMerge could hang applying a patch. (Stefan)
- BUG: Crash in log dialog when repo root
       isn't readable. (Ivan Zhakov, Stefan)
- BUG: Repo browser slow to close. (Stefan)
- BUG: CodeCollaborator was not properly detected. (Stefan)

Version 1.9.3
- BUG: The DEL key didn't work in the filter box
       in the log dialog. (Stefan)
- BUG: The %fname was not set when diffing two revisions
       of the same file from the log dialog. (Stefan)
- BUG: Crash when showing the context menu in the status
       list control if the class associations couldn't
       be created. (Stefan)
- BUG: TortoiseMerge: The horizontal scroll bar was wrong
       if the shown doc had a lot of tabs. (Stefan)
- BUG: Adjusting externals to the HEAD revision used
       always the same revision if multiple externals were
       selected. (Stefan)
- BUG: unicode data was not saved properly in the project
       monitor. (Stefan)
- BUG: Project monitor accepted escaped urls. Automatically
       unescapes them now. (Stefan)
- CHG: the "break locks" checkbox in the cleanup dialog
       is now unchecked by default, and remembers its
       state between sessions. (Stefan)
- BUG: The "create vendor branch" command failed to copy
       over files that have the svn:needs-lock property
       set or are otherwise set as readonly. (Stefan)