@@ -22,6 +22,9 @@ Version 1.9.5
        enabled. (Sven Strickroth)
 - BUG: The patch window in TMerge could be shown outside of a 
        multi-monitor setup, i.e. not in a visible area. (Stefan)
+- BUG: When deleting multiple files with unversioned files
+       mixed in, the "do this for all unversioned/modified files"
+       still showed a lot of error messages for unversioned files. (Stefan)
 
 Version 1.9.4
 - BUG: GDI Resource leak when showing a file list. (Stefan, Ivan)
